# conan-cmake-examples

./: LICENSE  README.md
example1/: setup.txt
example1/app/: CMakeLists.txt  conanfile.py
example1/app/src/: app.cpp  app.h
example1/app/test_package/: conanfile.py
example1/conan-settings/conan2/: global.conf  settings.yml
example1/conan-settings/conan2/profiles/: default
example1/mylib-a/: CMakeLists.txt  conanfile.py
example1/mylib-a/include/: mylib-a.h
example1/mylib-a/src/: mylib-a.cpp
example1/mylib-a/test_package/: CMakeLists.txt  conanfile.py
example1/mylib-a/test_package/src/: example.cpp
